# car-dashboard-subscription

./: README.md
ESP32/: read_dht11_push_to_api.c  read_dht11_push_to_api_and_led.c
car-dashboard-api-server/: api-get.php  api-insert.php
car-dashboard-qt-app/: CMakeLists.txt  CarData.cpp  CarData.h  Dashboard.qml  Fuel.qml  FuelNeedle.qml  Gear.qml  Info.qml  Main.qml  README.md  Speed.qml  SpeedNeedle.qml  main.cpp  qmldir  rc.qrc  tst_Info.qml  unitest_cardata.cpp
documents/: Overview.docx  Video intro - Scripts.docx  car-dashboard-subscription.drawio  phucnt38_car_dashboard.docx  test.txt  ~$erview.docx
